--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,3 +1,22 @@
 .title {
   background: rgb(121, 242, 157);
 }
+::-webkit-scrollbar {
+  /*整体样式*/
+  width: 5px;
+  height: 1px;
+}
+::-webkit-scrollbar-track {
+  /*轨道*/
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  /* background: #ededed; */
+  // background: #333;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  /*滚动条小方块*/
+  border-radius: 10px;
+  /* background-color: #2e75d3; */
+  background-color: rgb(99, 99, 99);
+  background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.2) 25%);
+}
